--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "FlutterCodeUtil",
 	"description": "",
 	"version": "0.0.1",
+	"publisher": "HelloCore",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
